# Bilewater

./: .clangd  CMakeLists.txt  README.md
include/: circle.h  fluid.h  fluid.hpp  init.h  init.hpp  input.h  input.hpp  shader.hpp  vector2.h
src/: circle.cpp  collisions.cpp  fluid.cpp  init.cpp  input.cpp  main.cpp  render.cpp  shader.cu  vector2.cpp
